Fixed overflow issue of blobs.js, small css change
Made it so that the canvas and the placement of the boundaries are based on the dimensions of the main element instead of being arbitrarily placed

--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: right;
-    height: 4vh;
+    height: 25px;
     width: 100%;
     background-color: var(--primary-contrast-weak);
     color: var(--primary-color)
@@ -172,7 +172,7 @@ a{
     grid-template: 1fr/1fr 1fr;
     align-items: center;
     justify-content: center;
-    height: 7.5vh;
+    height: 45px;
     width: 100%;
     background-color: var(--secondary-color);
 }
@@ -204,8 +204,8 @@ a{
 }
 
 .searchbar{
-    padding-left: 0.5rem;
     padding-top: 0;
+    height: fit-content;
 }
 
 .searchbar input[type=text]{
@@ -262,15 +262,12 @@ a{
 /*Main & Canvas*/
 
 main{
-    height: 100%;
+    height: 89%;
     width: 100%;
 }
 
 #canvas{
-    display: flex;
     position: absolute;
-    align-self: center;
-    justify-self: center;
     z-index: -1;
 }
 
